# pattern_sense

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
benchmark_results/: breast_cancer_focused_results.csv
benchmark_results/breast_cancer/: benchmark_results.csv
benchmark_results/diabetes/: benchmark_results.csv
data/ecg/: ecg_000_abnormal.npz  ecg_001_normal.npz  ecg_002_normal.npz  ecg_003_abnormal.npz  ecg_004_normal.npz  ecg_005_normal.npz  ecg_006_abnormal.npz  ecg_007_normal.npz  ecg_008_normal.npz  ecg_009_abnormal.npz  ecg_010_normal.npz  ecg_011_normal.npz  ecg_012_abnormal.npz  ecg_013_normal.npz  ecg_014_normal.npz  ecg_015_abnormal.npz  ecg_016_normal.npz  ecg_017_normal.npz  ecg_018_abnormal.npz  ecg_019_normal.npz  ecg_020_normal.npz  ecg_021_abnormal.npz  ecg_022_normal.npz  ecg_023_normal.npz  ecg_024_abnormal.npz  ecg_025_normal.npz  ecg_026_normal.npz  ecg_027_abnormal.npz  ecg_028_normal.npz  ecg_029_normal.npz
docs/: QUICKSTART.md  WHITEPAPER.md
docs/assets/: generate_logo.py
examples/: advanced_pattern_recognition_demo.py  basic_mtu_simulation.py  learning_demonstration.py
examples/applications/: ecg_anomaly_detection.py  medical_imaging.py
examples/benchmarks/: README.md  comprehensive_benchmark.py  comprehensive_benchmark_report.py  enhanced_benchmark_suite.py  run_focused_benchmark.py  simple_benchmark.py
examples/experiments/: pattern_recognition_benchmark.py  unified_benchmark.py
notebooks/: create_notebook.py  unified_explorer.ipynb
results/: mnist_performance_report.md
(+40 files in other folders)
