[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unified-consciousness"
version = "0.1.0"
description = "A computational framework for emergent intelligence based on holographic substrate theory"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "UNIFIED Consciousness Team"}
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "sympy>=1.12.0",
    "torch>=2.0.0",  # For Metal GPU support on Mac
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "networkx>=3.2.0",
    "numba>=0.58.0",  # For JIT compilation
    "pydantic>=2.5.0",
    "ipykernel>=6.0.0",  # For notebook integration
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/unified"]

[tool.ruff]
target-version = "py312"

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project.urls]
Repository = "https://github.com/unified-consciousness/unified"
Documentation = "https://unified-consciousness.readthedocs.io"
